# myrica

./: .editorconfig  .gitignore  README.md  pom.xml
grpc-server/: pom.xml
grpc-server/src/main/java/cn/az/code/: GrpcApplication.java
grpc-server/src/main/java/cn/az/code/grpc/: GrpcApplication.java
grpc-server/src/main/java/cn/az/code/hello/: HelloGrpcServer.java
grpc-server/src/main/java/cn/az/code/interceptor/: CustomClientTracingInterceptor.java  CustomServerTracingInterceptor.java
grpc-server/src/main/java/cn/az/code/support/: ActiveSpanSource.java  OpenTracingContextKey.java  OperationNameConstructor.java
grpc-server/src/main/resources/proto/hello/: hello.proto
img-server/: pom.xml
img-server/src/main/resources/: application.yaml
include/: hello-jni.h
jni-practice/: pom.xml
jni-practice/hello-jni/: hello-jni.cc
jni-practice/lib/: CMakeLists.txt  demo_jni.cc  demo_jni.h  jvm_onload.cc
jni-practice/src/cn/az/jni/: DemoJni.java  DemoMain.java
jni-practice/src/main/java/cn/az/code/jni/: HelloJni.java
jni-server/: pom.xml
libmyrica/: CMakeLists.txt  jvm_onload.cc  myrica.cc  myrica.h
spring-longhorn/: pom.xml
spring-longhorn/src/main/java/: module-info.java
src/main/java/cn/az/myrica/: MyricaApplication.java
src/main/java/cn/az/myrica/hello/: HelloGrpcServer.java
src/main/java/cn/az/myrica/interceptor/: CustomClientTracingInterceptor.java  CustomServerTracingInterceptor.java
src/main/java/cn/az/myrica/support/: ActiveSpanSource.java  OpenTracingContextKey.java  OperationNameConstructor.java
src/main/resources/: makefile
(+35 files in other folders)
